<resources>
    <!--  General  -->
    <string name="general_image_content_description">Ini merupakan sebuah gambar</string>
    <string name="general_error_message">Terjadi kesalahan!</string>
    <string name="general_error_server_message">Ups! Mohon maaf, terjadi kesalahan server sehingga halaman ini gagal dimuat. Klik "Muat Ulang" untuk memperbarui halaman</string>
    <string name="general_no_internet_error_message">Mohon periksa kembali koneksi internet kamu</string>
    <string name="general_error_data_empty">Silahkan periksa kembali data yang kamu masukkan</string>
    <string name="general_no_internet_error_title">Tidak ada koneksi internet</string>
    <string name="general_reload">Muat Ulang</string>
    <string name="default_notification_channel_id">default</string>

    <!--Non-Translatable-->
    <string name="non_translatable_tag_focus_holder">FOCUS_HOLDER</string>
    <string name="non_translatable_notification_channel_name">Default Notification Channel</string>

    <string name="error_view_tag">error_view_tag</string>

    <!--region Login-->
    <string name="login_password_field_title">Password</string>
    <string name="login_page_title">Masuk</string>
    <string name="login_page_description">Yuk! Masuk dan cari layanan yang sesuai untuk pengiriman paketmu</string>
    <string name="login_success_title">Berhasil Masuk</string>
    <string name="login_success_message">Asyik, Yuk kirim paket dengan mudah hanya tinggal selangkah lagi!</string>
    <string name="login_phone_number_field_title">Nomor Handphone</string>
    <string name="login_login_button_label">Masuk</string>
    <string name="login_now_message">Masuk Sekarang</string>
    <string name="register_password_field_hint">Password</string>
    <!--endregion Login-->
</resources>
