<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clErrorPageContainer"
    android:background="@color/white"
    android:tag="@string/error_view_tag"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/llContainerErrorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgErrorPageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_14"
            android:adjustViewBounds="true"
            android:contentDescription="@string/general_image_content_description"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/txtErrorPageMessageTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_no_connection" />

        <TextView
            android:id="@+id/txtErrorPageMessageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="@color/shades5"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@id/txtErrorPageMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgErrorPageIcon"
            tools:text="Koneksi Bermasalah" />

        <TextView
            android:id="@+id/txtErrorPageMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtErrorPageMessageTitle"
            tools:text="@string/general_no_internet_error_message" />

        <Button
            android:id="@+id/btnReload"
            style="@style/RoundedSexyRedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_12"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/general_reload"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
